[gd_scene load_steps=9 format=3 uid="uid://dvhs3v28y5q3m"]

[ext_resource type="Script" path="res://Scripts/LevelScript/arena.gd" id="1_cq1ae"]
[ext_resource type="PackedScene" uid="uid://v7qctv8pjko6" path="res://Prefabs/Levels/tile_map.tscn" id="2_eb1yn"]
[ext_resource type="Texture2D" uid="uid://cigeoq8khsupk" path="res://Unzipped Assets/Backgrounds+HellTiles/startups_from_hell__underground_arena.png" id="3_3hlyk"]
[ext_resource type="PackedScene" uid="uid://c3hpavbfwam7" path="res://Prefabs/Player+Item/player.tscn" id="3_o5dax"]
[ext_resource type="AudioStream" uid="uid://dmqdhw7vue8ui" path="res://Unzipped Assets/AssetPool/UTAudio/Undertale OST - 100 MEGALOVANIA.mp3" id="5_270iy"]
[ext_resource type="FontFile" uid="uid://c6iqh5dfh3512" path="res://Unzipped Assets/AssetPool/NotJamGlasgow13/Not Jam Glasgow 13.ttf" id="6_sqh6g"]
[ext_resource type="Script" path="res://Scripts/TimerScripts/EnemyTimer.gd" id="8_opro0"]

[sub_resource type="Theme" id="Theme_cpmuo"]
default_font = ExtResource("6_sqh6g")
default_font_size = 40

[node name="Arena" type="Node2D"]
script = ExtResource("1_cq1ae")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_offset = Vector2(776.3, 223.533)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(808, 420)
scale = Vector2(3.46032, 2.89743)
texture = ExtResource("3_3hlyk")

[node name="TileMap" parent="." instance=ExtResource("2_eb1yn")]
layer_0/tile_data = PackedInt32Array(-65536, 131075, 3, -65535, 131075, 3, -65534, 131075, 3, -65533, 131075, 3, -65532, 131075, 3, -65531, 131075, 3, -65530, 131075, 3, -65529, 131075, 3, -65528, 131075, 3, -65527, 131075, 3, -65526, 131075, 3, -65525, 131075, 3, -65524, 131075, 3, -65523, 131075, 3, -65522, 131075, 3, -65521, 131075, 3, -65520, 131075, 3, -65519, 131075, 3, -65518, 131075, 3, -65517, 131075, 3, -65516, 131075, 3, -65515, 131075, 3, -65514, 131075, 3, -65513, 131075, 3, -65512, 3, 5, 65535, 131075, 0, 131071, 131075, 0, 196607, 131075, 0, 262143, 131075, 0, 327679, 131075, 0, 393215, 131075, 0, 458751, 131075, 0, 524287, 131075, 0, 589823, 131075, 0, 655359, 131075, 0, 720895, 131075, 0, 25, 131075, 1, 65561, 131075, 1, 131097, 131075, 1, 196633, 131075, 1, 262169, 131075, 1, 327705, 131075, 1, 393241, 131075, 1, 458777, 131075, 1, 524313, 131075, 1, 589849, 131075, 1, 655385, 131075, 1, 720896, 262147, 3, 720897, 262147, 3, 720898, 262147, 3, 720899, 262147, 3, 720900, 262147, 3, 720901, 262147, 3, 720902, 262147, 3, 720903, 262147, 3, 720904, 262147, 3, 720905, 262147, 3, 720906, 262147, 3, 720907, 262147, 3, 720908, 262147, 3, 720909, 262147, 3, 720910, 262147, 3, 720911, 262147, 3, 720912, 262147, 3, 720913, 262147, 3, 720914, 262147, 3, 720915, 262147, 3, 720916, 262147, 3, 720917, 262147, 3, 720918, 262147, 3, 720919, 262147, 3, 720920, 3, 5, 786431, 3, 5, -1, 3, 5, 720921, 3, 5, -65511, 3, 5, 24, 131075, 1, 65560, 131075, 1, 131096, 131075, 1, 327704, 131075, 1, 393240, 131075, 1, 458776, 131075, 1, 524312, 131075, 1, 589848, 131075, 1, 655384, 131075, 1, 196632, 131075, 1, 262168, 131075, 1, 458756, 262147, 3, 458771, 262147, 3, 458770, 262147, 3, 458757, 262147, 3, 458755, 196611, 3, 458769, 196611, 3, 458758, 196611, 2, 458772, 196611, 2, 851977, 65536, 2, 851978, 65536, 2, 851979, 65536, 2, 917515, 65536, 2, 983051, 65536, 2, 983049, 65536, 2, 983050, 65536, 2, 1048585, 65536, 2, 1114121, 65536, 2, 1114122, 65536, 2, 1114123, 65536, 2, 983055, 65536, 2, 983054, 65536, 2, 983053, 65536, 2, 983056, 65536, 2, 917518, 65536, 2, 851983, 65536, 2, 851984, 65536, 2, 917520, 65536, 2, 1048592, 65536, 2, 1114128, 65536, 2, 983057, 65536, 2, 983058, 65536, 2, 851989, 65536, 2, 917526, 65536, 2, 983063, 65536, 2, 1048600, 65536, 2, 1114137, 65536, 2, 1114133, 65536, 2, 1048598, 65536, 2, 917528, 65536, 2, 851993, 65536, 2, 851996, 65536, 2, 917532, 65536, 2, 983068, 65536, 2, 1048604, 65536, 2, 1114140, 65536, 2, 851998, 65536, 2, 917534, 65536, 2, 983070, 65536, 2, 1048606, 65536, 2, 1114142, 65536, 2)

[node name="Player" parent="." instance=ExtResource("3_o5dax")]
position = Vector2(824, 320)

[node name="ArenaMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_270iy")
autoplay = true

[node name="GameUi2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="ScoreLabel2" type="Label" parent="GameUi2"]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 672.0
offset_top = -4.0
offset_right = 992.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_cpmuo")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
text = "SCORE: 0000"

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true
script = ExtResource("8_opro0")

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="RampArenaTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="RampArenaTimer2" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="HealthTimer" type="Timer" parent="."]
wait_time = 25.0
autostart = true

[node name="ArrowLow" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="KnifeDownTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="RampArenaTimer" to="EnemyTimer" method="_on_ramp_arena_timer_timeout"]
[connection signal="timeout" from="RampArenaTimer2" to="EnemyTimer" method="_on_ramp_arena_timer_2_timeout"]
[connection signal="timeout" from="HealthTimer" to="." method="_on_health_timer_timeout"]
[connection signal="timeout" from="ArrowLow" to="." method="_on_arrow_low_timeout"]
[connection signal="timeout" from="KnifeDownTimer" to="." method="_on_knife_down_timer_timeout"]
